fix: User content spacing

--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -650,7 +650,7 @@ h6.uppercase, .h6.uppercase {
 .timeline-item.user-content.show-indicator {
 	position: relative;
 	.media-body {
-		margin-left: 40px;
+		margin-left: 50px;
 	}
 	&::before {
 		.timeline-indicator();
